create a todo styling in progress

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
         <!-- create to do -->
         <div class="row align-center gap-10 todo-box">
             <div class="circle"></div>
-            <div class="todo-text">Create a new todo</div>
+            <span class="todo-text">Create a new todo</span>
         </div>
 
         <!-- list of to dos -->
