--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,7 +23,6 @@
 }
 body {
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 1.5rem;
 }
 .page-wrapper {
     position: relative;
@@ -61,13 +60,18 @@ h1.title {
     background-color: var(--l-very-light-gray);
     box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
     border-radius: 10px;
-    padding: .25rem .5rem;
+    padding: .5rem 1rem;
+    cursor: pointer;
 }
 .todo-text {
-    text-align: center;
+    color: var(--l-light-grayish-blue);
+    line-height: 1; /* Set line-height to the height of the container */
+    display: inline-block; /* Ensure block-level behavior */
+    vertical-align: middle;
+    font-size: 1.5rem;
 }
 .circle {
-    border-radius: 9999px;
+    border-radius: 50%;
     height: 1.5rem;
     width: 1.5rem;
     border: 1px solid rgba(0, 0, 0, 10%);
